--- a/Dark Side of the Moon/Dark Side of the Moon.vcxproj
+++ b/Dark Side of the Moon/Dark Side of the Moon.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MovableObject.cpp" />
@@ -26,6 +27,7 @@
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Button.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="MovableObject.h" />
     <ClInclude Include="Object.h" />
